--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,4 @@
-@mixin responsive() {
-    @media screen and (max-width: 960px){
-        @content;
-    }
-}
-
-*, *::after, *::before {
+*, *:after, *:before{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -12,29 +6,31 @@
 }
 
 @import 'partials/colors';
+@import 'partials/spacing';
 
-body {
+body{
     width: 100%;
     height: 100vh;
-    background-color: $blue-dark;
+
+    background: $blue-dark;
 }
 
-img, svg {
+img, svg{
     display: block;
     width: 100%;
 }
 
-a { 
+a{
     text-decoration: none;
     color: $white;
 }
 
-.border {
+.border{
     border: 1px solid red;
 }
 
-p {
-    font-size: 16px;
+p{
+    font-size: 14px;
     color: $gray-3;
     letter-spacing: 1px;
     line-height: 140%;
@@ -42,6 +38,5 @@ p {
 
 @import 'partials/layout';
 @import 'partials/menu';
+@import 'partials/buttons';
 @import 'partials/animations';
-@import 'partials/spacing';
-
