--- a/css/style.css
+++ b/css/style.css
@@ -633,7 +633,7 @@ header {
   width: 100%;
   position: fixed;
   z-index: 800;
-  padding-top: 16px;
+  padding-top: 20px;
 }
 
 .navbar {
@@ -648,6 +648,7 @@ header {
           align-items: center;
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0px 16px;
 }
 
 .nav-menu {
